repaired shrinking start screen when keybord enabled on mobile

--- a/styles/_start.scss
+++ b/styles/_start.scss
@@ -8,7 +8,7 @@
         top: 0; bottom: 0; left: 0; right: 0;
         margin: auto;
         padding: 20px;
-        height: 60vh;
+        height: 400px;
         width: 80vw;
         @media (min-width: 600px) {
             width: 400px;
