--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@
   right: 0;
   margin: auto;
   padding: 20px;
-  height: 60vh;
+  height: 400px;
   width: 80vw;
   background: white;
   border-radius: 20px;
